src/containers/Hero/styles.scss
/*
    ------------------------
    -------- Hero ----------
    ------------------------
*/

@import '../../styles/app.scss';

.hero{
    transform: translateY(-80px);
    position: relative;
    &__img-container{
        overflow: hidden;
    }

    &__bg-img{
        position: absolute;
        right: 0;
        width: 100%;
        z-index: var(--z-back);
    }

    &__text-container{
        text-align: center;

        .heading {
            margin-bottom: var(--space-sm);
        }

        p{
            margin-bottom: var(--space-lg);
        }
    }

    // Desktop
    @include breakpoint-up(large){

        @include flex(sb, c, row);
        transform: initial;
        padding: 170px 0;

        &__text-container{
            max-width: 447px;
            text-align: initial;
        }

        &__img-container{
            order: 2;
            right: -125px;
            top: -125px;
            max-width: 728.57px;
            position: absolute;
            z-index: var(--z-tooltip);
        }

        &__bg-img{
            width: initial;
            top: -80px;
            right: 0;
        }
    }
}

